Adjust collapse and display templates' html. Was intended for plans I have for ALKiln to more easily see these elements, but I found that to make those changes other changes were needed, and along the way I made the html a bit more robust and accessible to manipulation (like for CSS). The collapse template title can no longer appear to sit inline with the text surrounding it, but that's probably not a terrible thing because that feature only works when the element is at the very end of text. If it's in the middle of some text, the template content will end up pushing the rest of the text down unexpectedly. I also noticed that the copy button template didn't show the subject of the template unless it was also being collapsed. I think we should also remove the `h3` tag from the display template and I can add that to this set of changes if we want.

--- a/docassemble/ALToolbox/data/static/display_template.css
+++ b/docassemble/ALToolbox/data/static/display_template.css
@@ -1,3 +1,7 @@
+.al_display_template {
+  padding-bottom: 1rem;
+}
+
 .scrollable-panel{
   height:200px;
   overflow-y:scroll;
