--- a/docassemble/ALToolbox/data/static/styles.css
+++ b/docassemble/ALToolbox/data/static/styles.css
@@ -5,6 +5,7 @@
   background: lightcyan; 
   color: darkgreen; 
 }
-h5 {
+
+h5, .h5 {
   color: brown;
 }
